samples/_failures_safe/1761086433_e27781_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41c7b553.c: In function ‘main’:
./samples/SAFE/__tmp_41c7b553.c:132:9: error: expected expression at end of input
  132 |         if (token.type == TOKEN_EOF)
      |         ^~
./samples/SAFE/__tmp_41c7b553.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41c7b553.c:132:9: error: expected declaration or statement at end of input
